fix: Reduce the gap on .cardButton to 2% instead of 5%

--- a/src/components/Lists/CardList/CardList.scss
+++ b/src/components/Lists/CardList/CardList.scss
@@ -45,7 +45,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     color: white;
-    gap: 5%;
+    gap: 2%;
     cursor: pointer;
     height: 2rem;
 }
